update module profile, catalog; add module promotion
